# backend/routes/kermesse_routes.go
@@ -17,5 +17,7 @@ func initializeKermesseRoutes(r *gin.RouterGroup) {
 		kermesseRoutes.DELETE("/:id", middlewares.RoleMiddleware("admin", "organisateur"), controllers.DeleteKermesse)
 		kermesseRoutes.POST("/:id/participants/:user_id", controllers.AddParticipantToKermesse)
 		kermesseRoutes.POST("/:id/stands/:stand_id", controllers.AddStandToKermesse)
+		kermesseRoutes.POST("/leave/:kermesse_id", controllers.LeaveKermesseHandler)
+		kermesseRoutes.POST("/join/:kermesse_id", controllers.JoinKermesseHandler)
 	}
 }
